add Kong rate limit

--- a/k8s/kong/kong-configmap.yaml
+++ b/k8s/kong/kong-configmap.yaml
@@ -59,6 +59,15 @@ data:
           per_consumer: false
           status_code_metrics: true
           upstream_health_metrics: true
+          
+      # Thêm rate limit
+      - name: rate-limiting
+        config:
+          minute: 50
+          limit_by: ip
+          policy: local
+          fault_tolerant: true
+          hide_client_headers: false
 kind: ConfigMap
 metadata:
   name: kong-config
