--- a/k8s/kong/kong-deployment.yaml
+++ b/k8s/kong/kong-deployment.yaml
@@ -19,6 +19,7 @@ spec:
           ports:
             - containerPort: 8000
             - containerPort: 8001
+            - containerPort: 8002
           env:
             - name: KONG_DATABASE
               value: "off"
@@ -26,6 +27,8 @@ spec:
               value: "0.0.0.0:8001"
             - name: KONG_PROXY_LISTEN
               value: "0.0.0.0:8000"
+            - name: KONG_ADMIN_GUI_LISTEN
+              value: "0.0.0.0:8002"
             - name: KONG_DECLARATIVE_CONFIG
               value: /kong/kong.yaml
             - name: KONG_PLUGINS
