--- a/k8s/services/user-service-deployment.yaml
+++ b/k8s/services/user-service-deployment.yaml
@@ -24,6 +24,14 @@ spec:
               value: user-db
             - name: DB_PORT
               value: "3306"
+            - name: DB_NAME
+              value: user_db
+            - name: DB_USER
+              value: admin
+            - name: DB_PASS
+              value: password
+            - name: JWT_SECRET
+              value: secret
           resources:
             requests:
               cpu: 100m
