default disable smtp, update readme

--- a/k8s/grafana/grafana-deployment.yaml
+++ b/k8s/grafana/grafana-deployment.yaml
@@ -28,21 +28,21 @@ spec:
           env:
             - name: GF_SECURITY_ADMIN_PASSWORD
               value: password
-            - name: GF_SMTP_ENABLED
-              value: "true"
-            - name: GF_SMTP_HOST
-              value: "smtp.gmail.com:587"
-            - name: GF_SMTP_USER
-              value: "thaidev247@gmail.com"
-            - name: GF_SMTP_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: grafana-smtp-secret
-                  key: smtp-password
-            - name: GF_SMTP_FROM_ADDRESS
-              value: "thaidev247@gmail.com"
-            - name: GF_SMTP_FROM_NAME
-              value: "Grafana Alert"
+            # - name: GF_SMTP_ENABLED
+            #   value: "true"
+            # - name: GF_SMTP_HOST
+            #   value: "smtp.gmail.com:587"
+            # - name: GF_SMTP_USER
+            #   value: "thaidev247@gmail.com"
+            # - name: GF_SMTP_PASSWORD
+            #   valueFrom:
+            #     secretKeyRef:
+            #       name: grafana-smtp-secret
+            #       key: smtp-password
+            # - name: GF_SMTP_FROM_ADDRESS
+            #   value: "thaidev247@gmail.com"
+            # - name: GF_SMTP_FROM_NAME
+            #   value: "Grafana Alert"
           volumeMounts:
             - name: grafana-datasources
               mountPath: /etc/grafana/provisioning/datasources
